# libmango_OpenCL-wrapper

./: .gitignore  CMakeLists.txt  Kconfig  README  config.h.in  libmango.conf.in  readme_futura
dev/: CMakeLists.txt
dev/include/: CMakeLists.txt  mango_hn.h  mango_hn_gn.h  mango_hn_nuplus.h  mango_hn_peak.h  mango_hn_types.h
dev/include/gn/: mango_hn_gn.h
dev/src/: CMakeLists.txt  mango_hn.c  mango_hn_gn.c
dev/src/gn/: CMakeLists.txt  mango_hn.c  mango_hn_gn.c
dev/src/nuplus/: CMakeLists.txt  mango_hn.c  mango_hn_nuplus.c
dev/src/peak/: CMakeLists.txt  asm_call.c  mango_hn.c  mango_hn_peak.c
docs/: CMakeLists.txt  Doxyfile.in
host/: CMakeLists.txt
host/OpenCL/: CMakeLists.txt
host/OpenCL/include/: cl.h  clCommandQueue.h  clContext.h  clDevice.h  clEnqueue.h  clEvent.h  clExceptions.h  clKernel.h  clMem.h  clProgram.h  cl_platform.h  utils.h
host/OpenCL/include/CL/: cl.h  cl_platform.h
host/OpenCL/samples/: CMakeLists.txt
host/OpenCL/samples/YoutubeTutorials/HelloWorld/: CMakeLists.txt
host/OpenCL/samples/matrix_multiplication/: CMakeLists.txt  matrix_multiplication_host.c
host/OpenCL/samples/matrix_multiplication/kernel/: CMakeLists.txt  matrix_multiplication_dev.c
host/OpenCL/samples/opencl_matrix_multiplication/: opencl_matrix_multiplication_host.c
host/OpenCL/src/: CMakeLists.txt  cl.cpp  clCommandQueue.cpp  clContext.cpp  clDevice.cpp  clEnqueue.cpp  clEvent.cpp  clKernel.cpp  clMem.cpp  clProgram.cpp  utils.c
host/OpenCL/test/: CMakeLists.txt  main.c  matrix_multiplication.c  opencl_matrix_multiplication.c  vector_addition.c
host/OpenCL/test/kernel/: kernel.cl
host/include/: CMakeLists.txt  buffer.h  context.h  event.h  kernel.h  kernel_arguments.h  logger.h  mango.h  mango_types.h  mango_types_c.h  mm.h  profiling.h  task_graph.h  tlb.h
host/src/: CMakeLists.txt  buffer.cpp  context.cpp  event.cpp  kernel.cpp  kernel_arguments.cpp  logger.cpp  mango.cpp  mm.cpp  profiling.cpp  task_graph.cpp
include/: CMakeLists.txt  mango_types_c.h
